--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SGM</title>
   <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
- 
+  <script src="https://chancejs.com/chance.min.js"></script>
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
